--- a/registration_card/registration_form.html
+++ b/registration_card/registration_form.html
@@ -32,18 +32,18 @@
             margin-top: 20px;
             text-align: center;
         }
-        form .user-details{
+        form .card{
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
         }
 
-        form .user-details .input-box {
+        form .card .input-box {
             margin: 15px 0 12px 0;
             width: calc(100% /2 - 15px);
         }
       
-        .user-details .input-box  input {
+        .card .input-box  input {
             height: 35px;
             width: 100%;
             margin-top: 7px;
@@ -81,7 +81,7 @@
              <h1>Registration Form</h1>
 
 
-            <div class="user-details">
+            <div class="card">
                 <div class="input-box">
                     
                      <label for="fullname">Full Name</label>
